Fixed some UI issues
-Fixed a glitch with the navbar being not responsive from 700-1000px screen width size
-Made the Login page and the account management pages responsive

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -359,7 +359,7 @@
   animation-delay: 0.6s;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 991px) {
   .navTrigger{
     display: block;
   }
